bevy_asset_loader/tests/ui_with_2d_3d_features/enum.rs
use bevy_asset_loader::*;
use bevy::prelude::*;

fn main() {}

#[derive(AssetCollection)]
enum Test {
    #[asset(path = "test.ogg")]
    Asset(Handle<AudioSource>)
}
